Correcting gitignore to .gitignore in server.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,3 +1,5 @@
+# Dockerfile from React Frontend
+
 FROM node:15
 
 WORKDIR /usr/src/app
@@ -5,7 +7,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 ###  Installing dependencies
-RUN npm install --silent
+RUN npm install
 
 # copy local files to app folder
 COPY . .
