--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,16 @@
 version: '3.7'
 
 services:
+
+
   server:
     build:
       context: ./server
       dockerfile: Dockerfile
     image: myapp-server
     container_name: myapp-node-server
-    command: /usr/src/app/node_modules/.bin/nodemon server.js
+    # command: /usr/src/app/node_modules/.bin/nodemon server.js
+    command: npm run dev
     volumes:
       - ./server/:/usr/src/app
       - /usr/src/app/node_modules
@@ -19,7 +22,7 @@ services:
     environment:
       - NODE_ENV=development
     networks:
-      - app-network
+      - app-network  
   mongo:
     image: mongo
     volumes:
@@ -28,6 +31,8 @@ services:
       - "27017:27017"
     networks:
       - app-network
+
+
   client:
     build:
       context: ./client
