--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     image: myapp-server
     container_name: myapp-node-server
-    command: /usr/src/app/node_modules/.bin/nodemon server.js
+    # command: /usr/src/app/node_modules/.bin/nodemon server.js
     ports:
       - "5000:5000"
     depends_on:
@@ -30,7 +30,7 @@ services:
       dockerfile: Dockerfile
     image: myapp-client
     container_name: myapp-react-client
-    command: npm start
+    # command: npm start
     depends_on:
       - server
     ports:
