--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
-    image: myapp-server
-    container_name: myapp-node-server
+    image: mern-docker-project-server
+    container_name: mern-docker-project-node-server
     # command: /usr/src/app/node_modules/.bin/nodemon server.js
     ports:
       - "5000:5000"
@@ -28,8 +28,8 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile
-    image: myapp-client
-    container_name: myapp-react-client
+    image: mern-docker-project-client
+    container_name: mern-docker-project-react-client
     # command: npm start
     depends_on:
       - server
