--- a/backup-compose-w-volumes/docker-compose.yml
+++ b/backup-compose-w-volumes/docker-compose.yml
@@ -1,22 +1,19 @@
-version: '3.7'
+version: '3.2'
 
 services:
-
-
   server:
     build:
       context: ./server
       dockerfile: Dockerfile
-    image: myapp-server
-    container_name: myapp-node-server
-    command: npm start
+    image: mern-docker-project-server
+    container_name: mern-docker-project-node-server
+    # command: /usr/src/app/node_modules/.bin/nodemon server.js
     ports:
       - "5000:5000"
     depends_on:
       - mongo
     env_file: ./server/.env
-    environment:
-      - NODE_ENV=production
+
     networks:
       - app-network
   mongo:
@@ -27,15 +24,13 @@ services:
       - "27017:27017"
     networks:
       - app-network
-
-
   client:
     build:
       context: ./client
       dockerfile: Dockerfile
-    image: myapp-client
-    container_name: myapp-react-client
-    command: npm start
+    image: mern-docker-project-client
+    container_name: mern-docker-project-react-client
+    # command: npm start
     depends_on:
       - server
     ports:
@@ -46,10 +41,4 @@ services:
 networks:
     app-network:
         driver: bridge
-
-volumes:
-    data-volume:
-    node_modules:
-    web-root:
-      driver: local
 
